# frender

./: LICENSE  README.md  frender.py  pyproject.toml  requirements.txt
.gitea/workflows/: release.yaml  test.yaml
tests/: test_frender.py  test_integration.py
