[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frender"
version = "0.1.0"
description = "A CLI tool for rendering jinja2 templates"
authors = [{ name = "Andrew Arasmith", email = "andrew@arasmith.org" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }

# Dependencies your CLI needs
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "pytest>=8.4.2",
    "dotenv>=0.9.9",
]

# This tells pip/pipx what command to install
[project.scripts]
frender = "frender:main"
